--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Happy birthday project</title>
   
   <style>body {
- background-color: #073b4c;
+ background-color: #6b5f6d;
 }
 
 .body {
@@ -18,10 +18,10 @@
  margin-top: 100px;
 }
 
-h2 {
+h2{
  animation: 1s blink linear infinite;
  display: flex;
- justify-content: center;
+ justify-content: center; 
 }
 
 .birthdayCard {
@@ -36,12 +36,12 @@ h2 {
 
 .cardFront {
  position: relative;
- background-color: #fff;
+ background-color: #34567c;
  width: 250px;
  height: 350px;
  overflow: hidden;
  transform-origin: left;
- box-shadow: inset 100px 20px 100px rgba(0, 0, 0, .2), 30px 0 50px rgba(0, 0, 0, 0.4);
+ box-shadow: inset 100px 20px 100px rgba(1, 11, 10, 0.642), 30px 0 50px rgba(23, 23, 23, 0.432);
  transition: .6s;
 }
 
@@ -49,7 +49,7 @@ h2 {
  font-family: Tahoma, sans-serif;
  text-align: center;
  margin: 30px;
- background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+ background-image: linear-gradient(120deg, #336b47 30%, #af4d6b 100%);
  transition: .1s;
 }
 
@@ -134,13 +134,13 @@ h2 {
 
 .cardInside {
  position: absolute;
- background-color: #fff;
+ background-color: #6de4e4;
  width: 250px;
  height: 350px;
  z-index: -1;
  left: 0;
  top: 0;
- box-shadow: inset 100px 20px 100px rgba(0, 0, 0, 0.2);
+ box-shadow: inset 100px 20px 100px rgba(26, 101, 103, 0.3);
 }
 
 p {
@@ -163,7 +163,7 @@ p {
  text-align: center;
  margin: 30px;
  outline-color: #333;
- outline-style: dashed;
+outline-style: dotted;
 }
 
 .birthdayCard:hover {
@@ -217,7 +217,7 @@ footer a{
 </head>
 
 <body>
- <h2>Click this card</h2>
+<h2>Click this card</h2>
 <div class="body">
  <div class="birthdayCard">
 <div class="cardFront"><h3 class="happy">HAPPY BIRTHDAY!</h3>
@@ -236,8 +236,8 @@ footer a{
   </div>
 </div>
 </div>
-<footer><center>Design & Develop by <a href="https://praweensoni.netlify.app/">PK'S</a></center>
-</footer>
-  <script src="main.js"></script>
+<!-- <footer><center>Design & Develop by <a href="https://praweensoni.netlify.app/">PK'S</a></center>
+</footer> -->
+  <!-- <script src="main.js"></script> -->
 </body>
 </html>
